# alex-editor

./: README.md  setup.cfg
src/alex_editor/: __init__.py  __main__.py  base.py  command_palette.py  syntax_highlighter.py  tools.py  util.py  widgets.py
