[metadata]
name = alex_editor
version = 1.0.0
license = GPL-3.0
description = Text editor
long_description = file: README.md
classifiers = Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
install_requires = PyQt6

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
